prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_freeze_type_mismatch.nut
// EXPECTED: compile-time error - freeze({}) returns table, assigned to int variable
local x: int = freeze({a = 1})
return x
